# GOAT-PREDICTION

./: .babelrc  .dockerignore  .env.development  .env.example  .env.local  .env.production  .env.staging  .eslintignore  .eslintrc.js  .gitignore  .nvmrc  .prettierignore  .prettierrc  .python-version  .stylelintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Prompt.txt  ROADMAP.md  SECURITY.md  constraints.txt  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  next.config.js  package.json  postcss.config.js  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js  tsconfig.json
.backups/: README.md  backup-manager.sh
.backups/config/: backup-manager.py  xenon.js
.backups/database/: README.md  backup-script.py  xenon.js
.backups/logs/: log-backup.sh  xenon.js
.backups/models/: model-backup.py  xenon.js
.cache/: README.md  cache-cleaner.py
.cache/data/: xenon.js
.cache/logs/: README.md  xenon.js
.cache/ml-models/: README.md  xenon.js
.cache/tmp/: README.md  xenon.js
.config/: README.md  config-manager.py
.config/certbot/: README.md  certbot-setup.sh  xenon.js
.config/elasticsearch/: README.md  xenon.js
.config/grafana/: README.md  xenon.js
.config/nginx/: README.md  nginx-setup.sh  xenon.js
.config/prometheus/: README.md  xenon.js
.github/: README.md  xenon.js
.github/workflows/: README.md  security-scan.yml  xenon.js
.logs/: README.md  log-manager.sh  xenon.js
.logs/access/: README.md  access-log-rotator.sh  xenon.js
.logs/application/: README.md  log-monitor.py  xenon.js
.logs/audit/: audit-analyzer.py  xenon.js
.logs/error/: README.md  error-tracker.py  xenon.js
.logs/rotated/: README.md  log-rotate.sh  xenon.js
.secrets/: README.md  secrets-manager.sh  xenon.js
.secrets/api-keys/: README.md  api-keys-manager.py  xenon.js
.secrets/auth/: auth-manager.py  xenon.js
.secrets/database/: db-secrets-manager.py  xenon.js
.secrets/ssl/: ssl-manager.py  xenon.js
.tmp/: README.md  temp-cleaner.py  xenon.js
.tmp/backups/: xenon.js
.tmp/downloads/: README.md  xenon.js
.tmp/processing/: README.md  xenon.js
.tmp/uploads/: README.md  xenon.js
backend/: README.md  backend-manager.sh  xenon.js
backend/api-gateway/: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  xenon.js
backend/api-gateway/config/: config.yaml  middleware.yaml
backend/api-gateway/src/: app.py  app_factory.py  dependencies.py  main.py  xenon.js
backend/api-gateway/src/config/: README.md  __init__.py  config.yaml  config_loader.py  constants.py  env_config.py  logging.yaml  logging_config.py  settings.py  test_settings.py  xenon.js  yaml_config.py
backend/api-gateway/src/core/: config.py  exceptions.py  logging.py
backend/api-gateway/src/core/exceptions/: config_errors.py
backend/api-gateway/src/core/xceptions/: config_errors.py
backend/api-gateway/src/middleware/: __init__.py  auth.py  cors.py  error_handler.py  logging.py  middleware_manager.py  rate_limiter.py  validation.py  xenon.js
backend/api-gateway/src/models/: user.py
backend/api-gateway/src/routes/: README.md  __init__.py  init.py  router.py  xenon.js
backend/api-gateway/src/routes/admin/: README.md  __init__.py  admin_routes.py  models.py  system.py  users.py  xenon.js
backend/api-gateway/src/routes/v1/: __init__.py  analytics.py  bets.py  predictions.py  sports.py  subscriptions.py  users.py  v1_routes.py  webhooks.py  xenon.js
backend/api-gateway/src/routes/v2/: README.md  __init__.py  advanced.py  insights.py  predictions.py  realtime.py  v2_routes.py  xenon.js
backend/api-gateway/src/schemas/: __init__.py  bets.py  predictions.py  responses.py  schemas_manager.py  sports.py  users.py  xenon.js
backend/api-gateway/src/utils/: README.md  __init__.py  converters.py  formatters.py  helpers.py  utils_manager.py  validators.py  xenon.js
backend/api-gateway/tests/: conftest.py  test_runner.py  xenon.js
backend/api-gateway/tests/e2e/: test_full_flow.py  test_performance.py  xenon.js
backend/api-gateway/tests/integration/: integration_runner.py  test_api.py  test_auth.py  test_rate_limit.py  xenon.js
backend/api-gateway/tests/unit/: test_middleware.py  test_routes.py  test_utils.py  unit_runner.py  xenon.js
backend/auth-service/: README.md  run.py  xenon.js
backend/notification-service/: README.md  run.py  xenon.js
backend/prediction-engine/: 1.env.example  1.gitignore  README.md  run.py  xenon.js
backend/subscription-service/: README.md  run.py  xenon.js
backend/user-service/: README.md  run.py  xenon.js
data-pipeline/: README.md  pipeline_manager.py  xenon.js
data-pipeline/batch/: README.md  batch_manager.py  xenon.js
data-pipeline/real-time/: README.md  realtime_manager.py  xenon.js
data-pipeline/storage/: README.md  storage_manager.py  xenon.js
database/: database_manager.py  xenon.js
database/redis/: README.md  docker-compose.redis.yml  redis_manager.sh  xenon.js
database/supabase/: README.md  supabase_manager.sh  xenon.js
database/timescaledb/: README.md  timescaledb-config.yaml  timescaledb_manager.sh  xenon.js
docs/: README.md  docs_manager.py  xenon.js
docs/api/: api_doc_manager.py  xenon.js
docs/architecture/: README.md  architecture_doc_manager.py  system-architecture.md  xenon.js
docs/deployment/: README.md  deployment_doc_manager.py  xenon.js
docs/development/: README.md  development_doc_manager.py  xenon.js
docs/ml/: ml_doc_manager.py  xenon.js
docs/user-guide/: README.md  user_guide_manager.py  xenon.js
frontend/: frontend_manager.py  xenon.js
frontend/admin-dashboard/: README.md  xenon.js
frontend/landing-page/: README.md  landing-page-manager.py  xenon.js
frontend/mobile-app/: README.md  xenon.js
frontend/web-app/: README.md  (+4 more)
infrastructure/: README.md  infrastructure_manager.py  xenon.js
mlops/: README.md  mlops_manager.py  xenon.js
scripts/: script_manager.py  xenon.js
tests/: test_manager.py  xenon.js
(+1176 files in other folders)
