# 🚀 GOAT PREDICTION ULTIMATE - PYPROJECT CONFIGURATION
# Version: 1.0.0
# Build System: Poetry 1.7.0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "goat-prediction-ultimate"
version = "1.0.0"
description = "Advanced AI-powered sports prediction and betting intelligence platform"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    {name = "GOAT Prediction Team", email = "dev@goat-prediction.com"}
]
maintainers = [
    {name = "AI Research Team", email = "research@goat-prediction.com"}
]
keywords = [
    "sports-prediction",
    "machine-learning",
    "betting-intelligence",
    "ai",
    "data-science",
    "sports-analytics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.9,<3.12"
dependencies = [
    # Core Frameworks
    "fastapi>=0.104.0,<0.105.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    
    # Database & ORM
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "redis>=5.0.0,<6.0.0",
    "motor>=3.3.0,<4.0.0",
    
    # Machine Learning Core
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.1.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "scipy>=1.11.0,<2.0.0",
    
    # Deep Learning
    "torch>=2.1.0,<3.0.0",
    "tensorflow>=2.14.0,<3.0.0",
    "transformers>=4.36.0,<5.0.0",
    
    # Data Processing
    "dask>=2023.11.0,<2024.0.0",
    "polars>=0.19.0,<0.20.0",
    
    # API Clients
    "requests>=2.31.0,<3.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    
    # Advanced ML
    "xgboost>=2.0.0,<3.0.0",
    "lightgbm>=4.1.0,<5.0.0",
    "catboost>=1.2.0,<2.0.0",
    "optuna>=3.4.0,<4.0.0",
    
    # Time Series
    "prophet>=1.1.0,<2.0.0",
    "statsmodels>=0.14.0,<0.15.0",
    
    # NLP
    "nltk>=3.8.0,<4.0.0",
    "spacy>=3.7.0,<4.0.0",
    
    # Message Queues
    "kafka-python>=2.0.0,<3.0.0",
    
    # Caching
    "cachetools>=5.3.0,<6.0.0",
    
    # Monitoring
    "prometheus-client>=0.19.0,<0.20.0",
    "mlflow>=2.8.0,<3.0.0",
    
    # Security
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "bcrypt>=4.1.0,<5.0.0",
    "cryptography>=41.0.0,<42.0.0",
    
    # Utilities
    "python-dateutil>=2.8.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    
    # Cloud
    "boto3>=1.34.0,<2.0.0",
    
    # Testing (runtime minimal)
    "pytest>=7.4.0,<8.0.0",
]

[project.optional-dependencies]
dev = [
    # Development Tools
    "black>=23.11.0,<24.0.0",
    "flake8>=6.1.0,<7.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.7.0,<2.0.0",
    "pylint>=3.0.0,<4.0.0",
    "pre-commit>=3.5.0,<4.0.0",
    
    # Testing
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",
    "factory-boy>=3.3.0,<4.0.0",
    "faker>=21.0.0,<22.0.0",
    
    # Documentation
    "sphinx>=7.2.0,<8.0.0",
    "sphinx-rtd-theme>=1.3.0,<2.0.0",
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.4.0,<10.0.0",
    
    # Jupyter
    "jupyter>=1.0.0,<2.0.0",
    "jupyterlab>=4.0.0,<5.0.0",
    "ipython>=8.17.0,<9.0.0",
    
    # Interactive
    "ipdb>=0.13.13,<0.14.0",
    "rich>=13.7.0,<14.0.0",
    "tqdm>=4.66.0,<5.0.0",
    
    # Profiling
    "pyinstrument>=4.6.0,<5.0.0",
    "memory-profiler>=0.61.0,<0.62.0",
]

ml = [
    # Advanced ML
    "shap>=0.43.0,<0.44.0",
    "hyperopt>=0.2.7,<0.3.0",
    "dgl>=1.1.0,<2.0.0",
    "torch-geometric>=2.4.0,<3.0.0",
    
    # Experiment Tracking
    "wandb>=0.16.0,<0.17.0",
    "comet-ml>=3.35.0,<4.0.0",
    
    # Model Debugging
    "evidently>=0.4.15,<0.5.0",
    "captum>=0.7.0,<0.8.0",
    
    # Visualization
    "matplotlib>=3.8.0,<4.0.0",
    "seaborn>=0.13.0,<0.14.0",
    "plotly>=5.17.0,<6.0.0",
]

data = [
    # Data Pipeline
    "faust>=1.10.0,<2.0.0",
    "prefect>=2.14.0,<3.0.0",
    "dagster>=1.5.0,<2.0.0",
    
    # Feature Engineering
    "category-encoders>=2.6.0,<3.0.0",
    "featuretools>=1.27.0,<2.0.0",
    "tsfresh>=0.20.0,<0.21.0",
    
    # Performance
    "numba>=0.58.0,<0.59.0",
    "bottleneck>=1.3.7,<2.0.0",
]

api = [
    # API Extensions
    "fastapi-cache2>=0.2.0,<0.3.0",
    "fastapi-limiter>=0.1.5,<0.2.0",
    "fastapi-pagination>=0.12.6,<0.13.0",
    "fastapi-cors>=0.1.0,<0.2.0",
    
    # API Testing
    "pytest-httpx>=0.27.0,<0.28.0",
    "requests-mock>=1.11.0,<2.0.0",
    "httpie>=3.2.0,<4.0.0",
]

sports = [
    # Sports Data
    "sportsdataverse>=0.3.0,<0.4.0",
    "nba-api>=1.0.0,<2.0.0",
    "nfl-data-py>=1.4.0,<2.0.0",
    
    # Betting APIs
    "betfairlightweight>=2.19.0,<3.0.0",
    "pinnacle>=1.1.0,<2.0.0",
    
    # Sports Analytics
    "sportypy>=1.2.0,<2.0.0",
]

quantum = [
    # Quantum Computing
    "qiskit>=0.45.0,<0.46.0",
    "pennylane>=0.32.0,<0.33.0",
]

deploy = [
    # Deployment
    "docker>=6.1.0,<7.0.0",
    "kubernetes>=28.1.0,<29.0.0",
    
    # Model Serving
    "seldon-core>=1.17.0,<2.0.0",
    "bentoml>=1.0.24,<2.0.0",
    
    # Feature Store
    "feast>=0.31.0,<0.32.0",
]

[project.urls]
Homepage = "https://goat-prediction.com"
Documentation = "https://docs.goat-prediction.com"
Repository = "https://github.com/goat-prediction/ultimate"
Changelog = "https://github.com/goat-prediction/ultimate/blob/main/CHANGELOG.md"
Issues = "https://github.com/goat-prediction/ultimate/issues"
Support = "https://discord.gg/goat-prediction"

[project.scripts]
goat-prediction-api = "backend.api_gateway.src.main:main"
goat-prediction-ml = "backend.prediction_engine.src.main:main"
goat-prediction-worker = "backend.prediction_engine.src.worker:main"
goat-prediction-train = "backend.prediction_engine.src.ml.trainers.model_trainer:main"
goat-prediction-collect = "backend.prediction_engine.src.data.collectors.collector_manager:main"

[tool.poetry]
name = "goat-prediction-ultimate"
version = "1.0.0"
description = "Advanced AI-powered sports prediction and betting intelligence platform"
authors = ["GOAT Prediction Team <dev@goat-prediction.com>"]
license = "Proprietary"
readme = "README.md"
homepage = "https://goat-prediction.com"
repository = "https://github.com/goat-prediction/ultimate"
documentation = "https://docs.goat-prediction.com"
keywords = ["sports-prediction", "machine-learning", "betting-intelligence", "ai"]

[tool.poetry.dependencies]
python = "^3.9"
# Dependencies are defined in [project.dependencies]

[tool.poetry.group.dev.dependencies]
# Development dependencies are defined in [project.optional-dependencies.dev]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | frontend
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["goat_prediction"]
known_third_party = [
    "fastapi", "pydantic", "sqlalchemy", "numpy", "pandas", 
    "sklearn", "torch", "tensorflow", "transformers"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pydantic.*",
    "sqlalchemy.*",
    "alembic.*",
    "tensorflow.*",
    "torch.*"
]
ignore_missing_imports = true

[tool.pylint.master]
load-plugins = ["pylint.extensions.docparams", "pylint.extensions.docstyle"]
extension-pkg-whitelist = ["pydantic"]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "line-too-long",
    "import-error",
    "no-name-in-module",
    "unused-argument",
    "broad-except",
    "too-many-arguments",
    "too-many-locals",
    "too-many-statements",
    "too-many-branches",
    "too-many-instance-attributes",
    "protected-access",
    "duplicate-code"
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-attributes = 20
max-args = 10
max-locals = 25
max-statements = 100
max-branches = 30

[tool.pytest.ini_options]
testpaths = [
    "backend/prediction_engine/tests",
    "backend/api_gateway/tests",
    "tests"
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "performance: performance tests",
    "ml: machine learning tests",
    "api: api tests",
    "database: database tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ResourceWarning"
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/node_modules/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
fail_under = 80

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "YTT", # flake8-2020
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "frontend",
    "node_modules",
]
per-file-ignores = {
    "__init__.py": ["F401"]
}

[tool.ruff.isort]
known-first-party = ["goat_prediction"]

[tool.mlflow]
tracking_uri = "http://localhost:5000"
registry_uri = "postgresql://mlflow:mlflow@localhost:5432/mlflow"
experiment_name = "goat-prediction"

[tool.pre-commit]
repos = [
    {
        repo = "https://github.com/pre-commit/pre-commit-hooks",
        rev = "v4.5.0",
        hooks = [
            {id = "check-added-large-files", args = ["--maxkb=5000"]},
            {id = "check-merge-conflict"},
            {id = "check-toml"},
            {id = "check-yaml", args = ["--allow-multiple-documents"]},
            {id = "end-of-file-fixer"},
            {id = "trailing-whitespace"},
            {id = "mixed-line-ending", args = ["--fix=lf"]},
        ]
    },
    {
        repo = "https://github.com/astral-sh/ruff-pre-commit",
        rev = "v0.1.6",
        hooks = [{id = "ruff", args = ["--fix"]}]
    },
    {
        repo = "https://github.com/psf/black",
        rev = "23.11.0",
        hooks = [{id = "black"}]
    },
    {
        repo = "https://github.com/pre-commit/mirrors-mypy",
        rev = "v1.7.0",
        hooks = [
            {
                id = "mypy",
                additional_dependencies = [
                    "types-requests",
                    "types-python-dateutil",
                    "types-pyyaml",
                ]
            }
        ]
    },
    {
        repo = "https://github.com/PyCQA/bandit",
        rev = "1.7.5",
        hooks = [
            {
                id = "bandit",
                args = ["-c", "pyproject.toml"],
                exclude = "tests/"
            }
        ]
    },
]

[project.entry-points."console_scripts"]
goat-prediction = "goat_prediction.cli:main"
goat-train = "goat_prediction.ml.train:main"
goat-predict = "goat_prediction.ml.predict:main"
goat-collect = "goat_prediction.data.collect:main"

[project.entry-points."mlflow.project_backend"]
goat-prediction = "goat_prediction.mlflow:backend"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["*"]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.txt", "*.md"]

[tool.setuptools.dynamic]
version = {attr = "goat_prediction.__version__"}
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}

# Security scanning
[tool.safety]
policy-file = "security-policy.yml"
ignore = [
    "51457",  # tensorflow
    "51499",  # torch
]

# Performance profiling
[tool.pyinstrument]
renderer = "html"
timeline = true
show_all = true

# Logging configuration
[tool.logging]
version = 1
disable_existing_loggers = false

[tool.logging.formatters.simple]
format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"

[tool.logging.formatters.detailed]
format = "%(asctime)s - %(name)s - %(levelname)s - %(pathname)s:%(lineno)d - %(message)s"

[tool.logging.handlers.console]
class = "logging.StreamHandler"
level = "INFO"
formatter = "simple"
stream = "ext://sys.stdout"

[tool.logging.handlers.file]
class = "logging.handlers.RotatingFileHandler"
level = "DEBUG"
formatter = "detailed"
filename = "logs/goat-prediction.log"
maxBytes = 10485760
backupCount = 10
encoding = "utf8"

[tool.logging.loggers."goat_prediction"]
level = "DEBUG"
handlers = ["console", "file"]
propagate = false

[tool.logging.loggers."sqlalchemy"]
level = "WARNING"
handlers = ["console"]
propagate = false

[tool.logging.loggers."uvicorn"]
level = "INFO"
handlers = ["console"]
propagate = false

[tool.logging.root]
level = "INFO"
handlers = ["console"]
