# backend/api-gateway/setup.cfg
[metadata]
name = goat-prediction-api
version = 1.0.0
description = GOAT Prediction Ultimate API Gateway
author = GOAT Prediction Team
author_email = dev@goat-prediction.com
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sports, predictions, betting, machine learning, fastapi
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Framework :: FastAPI
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.11
install_requires =
    fastapi>=0.104.0
    uvicorn[standard]>=0.24.0
    sqlalchemy>=2.0.0
    asyncpg>=0.29.0
    redis>=5.0.0
    python-jose[cryptography]>=3.3.0
    python-dotenv>=1.0.0
    pydantic>=2.5.0
    pydantic-settings>=2.1.0

[options.package_data]
* = *.json, *.yaml, *.yml, *.sql

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.6.0
    pre-commit>=3.0.0
ml =
    numpy>=1.24.0
    pandas>=2.0.0
    scikit-learn>=1.3.0

[options.entry_points]
console_scripts =
    goat-api = src.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    venv,
    .eggs,
    *.egg-info,
    migrations

[mypy]
python_version = 3.11
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "alembic.*",
]
ignore_missing_imports = true

[coverage:run]
source = src
omit =
    src/tests/*
    src/migrations/*
    src/__init__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod
